force-app/main/default/objects/Account/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <label>Account Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>