force-app/main/default/objects/Account/fields/AccountAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountAutoNumber__c</fullName>
    <description>Used for filling of AccountNumber</description>
    <displayFormat>1{0000000}</displayFormat>
    <inlineHelpText>Used for filling of AccountNumber</inlineHelpText>
    <label>AccountAutoNumber</label>
    <type>AutoNumber</type>
</CustomField>