force-app/main/default/objects/Account/fields/Accounting_Type__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Type__c</fullName>
    <formula>IF( ISBLANK(AccountNumber) , &quot;Pending Account No&quot;, TEXT(Type))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounting Type</label>
    <type>Text</type>
</CustomField>