force-app/main/default/objects/Account/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account</label>
    <length>8</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>