force-app/main/default/objects/Account/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <defaultValue>&quot;Enquiry&quot;</defaultValue>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Type</valueSetName>
    </valueSet>
</CustomField>