force-app/main/default/objects/Account/fields/Branch_Key__c.field-meta.xml
<CustomField>
    <fullName>Branch_Key__c</fullName>
    <label>Branch Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>