force-app/main/default/objects/Account/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <externalId>true</externalId>
    <label>Branch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>