force-app/main/default/objects/Account/fields/Capacity_PSA__c.field-meta.xml
<CustomField>
    <fullName>Capacity_PSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capacity PSA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capacity_PSA_Branches</relationshipName>
    <type>Lookup</type>
</CustomField>