force-app/main/default/objects/Account/fields/Capacity_PSA_Email__c.field-meta.xml
<CustomField>
    <fullName>Capacity_PSA_Email__c</fullName>
    <label>Capacity PSA Email</label>
    <type>Email</type>
</CustomField>