force-app/main/default/objects/Account/fields/Capacity_PSA_Phone__c.field-meta.xml
<CustomField>
    <fullName>Capacity_PSA_Phone__c</fullName>
    <label>Capacity PSA Phone</label>
    <type>Phone</type>
</CustomField>