force-app/main/default/objects/Account/fields/Enquiries_PSA__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_PSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiries PSA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiries_PSA_Branches</relationshipName>
    <type>Lookup</type>
</CustomField>