force-app/main/default/objects/Account/fields/Enquiries_PSA_Email__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_PSA_Email__c</fullName>
    <label>Enquiries PSA Email</label>
    <type>Email</type>
</CustomField>