force-app/main/default/objects/Account/fields/Enquiries_PSA_Phone__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_PSA_Phone__c</fullName>
    <label>Enquiries PSA Phone</label>
    <type>Phone</type>
</CustomField>