force-app/main/default/objects/Account/fields/Enquiry_PSA__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_PSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry PSA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiry_PSA_Branches</relationshipName>
    <type>Lookup</type>
</CustomField>