force-app/main/default/objects/Account/fields/Mailing_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Latitude__c</fullName>
    <label>Mailing Latitude</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>