force-app/main/default/objects/Account/fields/Mailing_Longtitude__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Longtitude__c</fullName>
    <label>Mailing Longtitude</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>