force-app/main/default/objects/Account/fields/Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postal_Code__c</fullName>
    <label>Mailing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>