force-app/main/default/objects/Account/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <label>Mailing Street</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>