force-app/main/default/objects/Account/fields/PSA_Area__c.field-meta.xml
<CustomField>
    <fullName>PSA_Area__c</fullName>
    <label>PSA Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PSA_Areas</valueSetName>
    </valueSet>
</CustomField>