force-app/main/default/objects/Account/fields/PSA_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>PSA_Area_Code__c</fullName>
    <description>Regarding area code</description>
    <label>PSA Area Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSA 6A</fullName>
            </value>
            <value>
                <fullName>PSA 4K</fullName>
            </value>
            <value>
                <fullName>PSA 4S</fullName>
            </value>
            <value>
                <fullName>PSA 5F</fullName>
            </value>
            <value>
                <fullName>PSA 5C</fullName>
            </value>
            <value>
                <fullName>PSA 5M</fullName>
            </value>
            <value>
                <fullName>PSA 5U</fullName>
            </value>
            <value>
                <fullName>PSA 1N</fullName>
            </value>
            <value>
                <fullName>PSA 4O</fullName>
            </value>
            <value>
                <fullName>PSA 2A</fullName>
            </value>
            <value>
                <fullName>PSA 4G</fullName>
            </value>
            <value>
                <fullName>PSA 6D</fullName>
            </value>
            <value>
                <fullName>PSA 4E</fullName>
            </value>
            <value>
                <fullName>PSA 1C</fullName>
            </value>
            <value>
                <fullName>PSA 5J</fullName>
            </value>
            <value>
                <fullName>PSA 4B</fullName>
            </value>
            <value>
                <fullName>PSA 4N</fullName>
            </value>
            <value>
                <fullName>PSA 5K</fullName>
            </value>
            <value>
                <fullName>PSA 3D</fullName>
            </value>
            <value>
                <fullName>PSA 8D</fullName>
            </value>
            <value>
                <fullName>PSA 5G</fullName>
            </value>
            <value>
                <fullName>PSA 4P</fullName>
            </value>
            <value>
                <fullName>PSA 5I</fullName>
            </value>
            <value>
                <fullName>PSA 4F</fullName>
            </value>
            <value>
                <fullName>PSA 2C</fullName>
            </value>
            <value>
                <fullName>PSA 5T</fullName>
            </value>
            <value>
                <fullName>PSA 4M</fullName>
            </value>
            <value>
                <fullName>PSA 4L</fullName>
            </value>
            <value>
                <fullName>PSA 3A</fullName>
            </value>
            <value>
                <fullName>PSA 5E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>