force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Regarding Region area</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yorkshire and the Humber</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>East of England</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>West Midlands</fullName>
            </value>
            <value>
                <fullName>South Central</fullName>
            </value>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>Northern Ireland</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>Channel Islands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>