force-app/main/default/objects/Account/fields/Zumzum__Additional_Reference__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Additional_Reference__c</fullName>
    <label>Additional Reference</label>
    <type>TextArea</type>
</CustomField>