force-app/main/default/objects/Account/fields/Zumzum__Balance__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Balance__c</fullName>
    <formula>IF( TEXT( Type ) = &#39;Supplier&#39;, Zumzum__Credit__c - Zumzum__Debit__c , Zumzum__Debit__c - Zumzum__Credit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>