force-app/main/default/objects/Account/fields/Zumzum__Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Bank_Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>