force-app/main/default/objects/Account/fields/Zumzum__Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Bank_Account_No__c</fullName>
    <description>The organisation&#39;s bank account number</description>
    <label>Bank Account No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>