force-app/main/default/objects/Account/fields/Zumzum__Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Bank_Address__c</fullName>
    <description>The organisation&#39;s bank address</description>
    <label>Bank Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>