force-app/main/default/objects/Account/fields/Zumzum__Bank_name__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Bank_name__c</fullName>
    <description>Organisation&#39;s bank name</description>
    <label>Bank Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>