force-app/main/default/objects/Account/fields/Zumzum__Bank_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Bank_Sort_Code__c</fullName>
    <label>Bank Sort Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>