force-app/main/default/objects/Account/fields/Zumzum__Co_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Co_Reg_No__c</fullName>
    <description>The company registration number if a limited company</description>
    <inlineHelpText>Enter the company registration number if a limited company</inlineHelpText>
    <label>Co Reg No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>