force-app/main/default/objects/Account/fields/Zumzum__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Country_Code__c</fullName>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>