force-app/main/default/objects/Account/fields/Zumzum__Credit__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Credit__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Planned to be deprecated 25/10/2015</inlineHelpText>
    <label>Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>