force-app/main/default/objects/Account/fields/Zumzum__Currency__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Currency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Currency</label>
    <referenceTo>Zumzum__Currency__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>