force-app/main/default/objects/Account/fields/Zumzum__Entity_Email__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Entity_Email__c</fullName>
    <description>Entity&#39;s main email address</description>
    <inlineHelpText>Enter entity&#39;s main email address</inlineHelpText>
    <label>Entity Email</label>
    <type>Email</type>
</CustomField>