force-app/main/default/objects/Account/fields/Zumzum__IBAN__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__IBAN__c</fullName>
    <label>IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>