force-app/main/default/objects/Account/fields/Zumzum__Nominal_Account__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Nominal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominal Account</label>
    <referenceTo>Zumzum__Nominal_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>