force-app/main/default/objects/Account/fields/Zumzum__Payment_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Payment_Due_Days__c</fullName>
    <label>Payment Due Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>