force-app/main/default/objects/Account/fields/Zumzum__Region__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>