force-app/main/default/objects/Account/fields/Zumzum__Settlement_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Settlement_Due_Days__c</fullName>
    <label>Settlement Due Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>