force-app/main/default/objects/Account/fields/Zumzum__Site__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Site__c</fullName>
    <description>The site name for this organisation if there are multiple locations</description>
    <inlineHelpText>Enter a site name for this organisation instance, if there are multiple locations</inlineHelpText>
    <label>Site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>