force-app/main/default/objects/Account/fields/Zumzum__Suppress_Monthly_Statements__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Suppress_Monthly_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Monthly Statements</label>
    <type>Checkbox</type>
</CustomField>