force-app/main/default/objects/Account/fields/Zumzum__Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Template_ID__c</fullName>
    <label>Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>