force-app/main/default/objects/Account/fields/Zumzum__Terms__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Terms__c</fullName>
    <defaultValue>&quot;Strictly 30 Days Net&quot;</defaultValue>
    <label>Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>