force-app/main/default/objects/Account/fields/Zumzum__Terms_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Terms_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms Agreed?</label>
    <type>Checkbox</type>
</CustomField>