force-app/main/default/objects/Account/fields/Zumzum__Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Total_Balance__c</fullName>
    <description>Created on 12-04-2015. 
Used to calculate Credits from Ledger using trigger. 
Deployed in v1.90</description>
    <formula>IF( TEXT( Type ) = &#39;Supplier&#39;, Zumzum__Total_Credit__c - Zumzum__Total_Debit__c , Zumzum__Total_Debit__c - Zumzum__Total_Credit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Customers, calculated from Total Credits less Total Debits, For Suppliers, calculated from Total Debits less Total Credits</inlineHelpText>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>