force-app/main/default/objects/Account/fields/Zumzum__Total_Credit__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Total_Credit__c</fullName>
    <description>Created on 21-04-2015. 
Used to calculate Credits from Ledger using trigger. 
Deployed in v1.90</description>
    <inlineHelpText>Automatically calculated from ledger records</inlineHelpText>
    <label>Total Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>