force-app/main/default/objects/Account/fields/Zumzum__Use_Default_Tax_for_Sales__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Use_Default_Tax_for_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Tax for Sales?</label>
    <type>Checkbox</type>
</CustomField>