force-app/main/default/objects/Account/fields/Zumzum__VAT_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__VAT_Reg_No__c</fullName>
    <description>Entity&#39;s VAT Registration Number if VAT registered</description>
    <inlineHelpText>Enter the entity&#39;s VAT Registration Number if VAT registered</inlineHelpText>
    <label>VAT Reg No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>