force-app/main/default/objects/Account/validationRules/Account_No_must_be_8_numeric_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_No_must_be_8_numeric_digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Zumzum__Bank_Account_No__c)),
NOT(REGEX(Zumzum__Bank_Account_No__c, &quot;[0-9]{8}&quot;))
)</errorConditionFormula>
    <errorDisplayField>Zumzum__Bank_Account_No__c</errorDisplayField>
    <errorMessage>Bank Account No must only contain 8 numbers.</errorMessage>
</ValidationRule>