force-app/main/default/objects/Account/validationRules/Billing_address_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_address_required</fullName>
    <active>true</active>
    <description>Billing address required when Account type Supplier</description>
    <errorConditionFormula>AND(
ISBLANK(Billing_Email__c),
ISPICKVAL(Type, &quot;Supplier&quot;))</errorConditionFormula>
    <errorDisplayField>Billing_Email__c</errorDisplayField>
    <errorMessage>Billing address shouldn&#39;t be empty.</errorMessage>
</ValidationRule>